Fix alignment on volunteers section

--- a/casn-frontend/casn-app/src/app/ride-detail-modal/ride-detail-modal.component.scss
+++ b/casn-frontend/casn-app/src/app/ride-detail-modal/ride-detail-modal.component.scss
@@ -68,6 +68,10 @@ h1 {
   margin-right: 16px;
 }
 
+.label--volunteer {
+  padding-top: 10px;
+}
+
 .border-bottom {
   border-bottom: 1px solid #ccc;
 }
@@ -161,7 +165,7 @@ agm-map {
 .rideshare {
   display: flex;
   flex: 1;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
 
   span {
